--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "andrewblake1/yii2-credit-card",
+  "name": "havryliv/yii2-credit-card",
   "description": "Yii2 credit card widget with client validation",
   "type": "yii2-extension",
   "keywords": [
@@ -8,17 +8,21 @@
     "card",
     "widget"
   ],
-  "homepage": "https://github.com/andrewblake1/yii2-credit-card",
+  "homepage": "https://github.com/havryliv/yii2-credit-card",
   "license": "MIT",
   "authors": [
     {
       "name": "Andrew Blake",
       "role": "Developer"
+    },
+    {
+      "name": "Havryliv Yaroslav",
+      "role": "Developer"
     }
   ],
   "support": {
-    "issues": "https://github.com/andrewblake1/yii2-credit-card/issues",
-    "source": "https://github.com/andrewblake1/yii2-credit-card"
+    "issues": "https://github.com/havryliv/yii2-credit-card/issues",
+    "source": "https://github.com/havryliv/yii2-credit-card"
   },
   "require": {
     "yiisoft/yii2": "~2",
@@ -27,7 +31,7 @@
   },
   "autoload": {
     "psr-4": {
-      "andrewblake1\\creditcard\\": ""
+      "havryliv\\creditcard\\": ""
     }
   },
   "extra": {
