--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,10 @@
     {
       "name": "Andrew Blake",
       "role": "Developer"
+    },
+    {
+      "name": "Yaroslav Havryliv",
+      "role": "Developer"
     }
   ],
   "support": {
